[package]
name = "nb-sync"
version = "0.2.0"
authors = ["Kevin Cuzner <kevin@kevincuzner.com>"]
description = "Non-blocking synchronization structures for bare-metal environments"
repository = "https://github.com/kcuzner/nb-sync"
license = "APSL-2.0 OR MIT"

[dependencies]
bare-metal = "0.1.2"
nb = "0.1.1"

